# blogger-agent-tfg

./: .dockerignore  .gitignore  .vercelignore  AGENT_ORCHESTRATION.md  AGENT_SKILLS.md  COHERENCE_REPORT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SCRAPER_IMPLEMENTATION.md  SETUP_GUIDE.md  deploy.ps1  index.html  lighthouserc.json  post.html  posts.json  skills-lock.json  vercel.json
.atl/: .skill-registry.cache.json  skill-registry.md
.github/: copilot-instructions.md
.github/agents/: speckit.critique.run.agent.md
.github/workflows/: ci.yml  lighthouse.yml
.playwright-mcp/: page-2026-04-03T22-16-18-592Z.yml  page-2026-04-03T22-16-30-987Z.yml  page-2026-04-03T22-19-27-338Z.yml  page-2026-04-03T22-19-35-101Z.yml  page-2026-04-03T22-21-08-081Z.yml
.specify/: extensions.yml
.specify/extensions/: .registry
.specify/memory/: changelog.md  constitution.md  plan.md  spec.md
backend/: .env.example  .gitignore  AGENTS_GUIDE.md  CLEANUP.md  DAGGR_WORKFLOW.md  Dockerfile  PUBLISHING_GUIDE.md  README.md  analysis_report.py  batch_generate.py  blogger_pipeline.py  cleanup_posts.py  cleanup_supabase.py  daggr_blogger_workflow.py  debug_hf_connection.py  delete_post.py  examples_scraper.py  generate_and_deploy.py  generate_sample_post.py  javipas_corpus.json  javipas_prompt_context.txt  javipas_style_profile.json  llm_modal_host.py  modal_app.py  modal_vllm.py  modal_vllm_deploy.py  pyproject.toml  requirements.txt  restyle_posts.py  setup.ps1  setup.sh  structural_analyzer.py  style_judge.py  test_auto_provider.py  test_full_pipeline.py  test_hf.py  test_llama.py  test_llama_32.py  test_local.py  test_no_token.py  (+4 more)
backend/.atl/: skill-registry.md
backend/aphra_blogger/: __init__.py  context.py  utils.py
backend/aphra_blogger/agents/: README.md  __init__.py  anonymous_blogger.py  content_generator.py  critic.py  html_builder.py  image_selector.py  keyword_extractor.py  news_research_agent.py  research_agent.py  style_analyzer.py  style_extractor.py  unsplash.py
backend/aphra_blogger/config/: default.toml
backend/aphra_blogger/llm/: __init__.py  base.py  factory.py  gemini_provider.py  huggingface_provider.py  modal_provider.py  openai_provider.py  vllm_provider.py
backend/aphra_blogger/workflows/: __init__.py  blogger_style.py
backend/backend/outputs/: continuous_history.json
backend/docs/: posts.json
backend/docs/posts/: apple-intelligence-2026.json
backend/inputs/: 50_ai_bigdata_topics.json
backend/openspec/: config.yaml
backend/openspec/changes/archive/2026-05-13-deep-research-pipeline/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
backend/openspec/changes/archive/2026-05-13-deep-research-pipeline/specs/organic-content-generation/: spec.md
backend/openspec/specs/deep-article-scraping/: spec.md
backend/openspec/specs/research-synthesis/: spec.md
backend/outputs/: Elfuturoesopenclaw.json  nemo_nvidia_test.json  openclaw_article.json
backend/src/: __init__.py
backend/src/orchestrator/: README.md  __init__.py  config.py  main.py  runner.py  safety.py  state.py
backend/src/orchestrator/continuous/: __init__.py  alerts.py  history_store.py  incident_manager.py  monitoring.py  retry_policy.py  scheduler.py  source_guard.py  topic_selector.py  validation.py
backend/tests/: conftest.py  test_agents.py  test_anonymous_blogger.py  test_batch_generate.py  test_deep_research.py  test_html_builder.py  test_orchestrator.py  test_orchestrator_config.py  test_scraper.py  test_structural_diversity.py  test_workflow.py
backend/tools/: README.md  __init__.py  scraper.py
docs/: COHERENCE_REPORT.md  FRONTEND_IMPLEMENTATION.md  GRADIO_INTERFACE.md  HTMLBUILDER_INTEGRATION.md  MODAL_DEPLOYMENT.md  NEXT_STEPS.md  ORCHESTRATION_PLAN.md  README.md  VERCEL_DEPLOYMENT.md  index.html  post.html  posts.json
docs/posts/: avances-en-la-computacion-cuantica-2026.html  avances-en-la-computación-cuántica-2026.html  bienvenido.json  criptomonedas-en-2026.html  el-futuro-de-la-ia-en-2026.html  el-futuro-de-nextjs.html  el-futuro-de-nextjs.json  el-futuro-de-openclaw.json  elon-musk-y-la-ia-en-2026.json  evolve-academy-la-academia-que-promete-programadores-en-meses-y-no-cumple.html  evolve-la-empresa-que-estafa-a-programadores-juniors.html  ia-en-la-educacion-2026.html  la-misteriosa-isla-de-epstein.json  nvidia-nemo-por-que-va-a-cambiar-como-construimos-agentes-de-ia.json  tesla-y-los-coches-electricos.html
frontend/: .gitignore  .vercelignore  README.md  jest.config.ts  jest.setup.ts  next.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/__tests__/: HTMLRenderer.test.tsx  PostCard.test.tsx  api.test.ts  integrity.test.ts  seo.test.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: Footer.tsx  GenerateForm.tsx  Header.tsx  PostCard.tsx  PostContent.tsx
frontend/lib/: api.ts  crossLinks.ts
frontend/types/: post.ts
hf_spaces/: app.py
openspec/: config.yaml
posts/: criptomonedas-en-2026.html  el-futuro-de-la-ia-en-2026.json  el-futuro-de-nextjs.json  ia-en-la-educación-2026.html  tesla-y-los-coches-eléctricos.json
project_docs/: ENVIRONMENT_VARIABLES.md  FRONTEND_IMPLEMENTATION.md  GRADIO_INTERFACE.md  HTMLBUILDER_INTEGRATION.md  HUGGINGFACE_MIGRATION.md  MODAL_DEPLOYMENT.md  NEXT_STEPS.md  ORCHESTRATION_PLAN.md  RESUMEN_TRABAJO_COMPLETADO.md  SCRAPER_IMPLEMENTATION.md  VERCEL_DEPLOYMENT.md
specs/002-unify-testing-docs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-analyze-style-mimicry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tech-debt-report.md  verify-tasks-report.md
specs/004-next-vercel-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  tech-debt-report.md
specs/005-frontend-visual-polish/: data-model.md  mobile-verification.md  plan.md  quickstart.md  research.md  research_hooks.md  spec.md  tasks.md  tech-debt-report.md  verify-tasks-report.md
specs/006-fix-gemini-api-key/: cleanup-findings.md  data-model.md  plan.md  (+5 more)
(+83 files in other folders)
