[project]
name = "blogger-agent-tfg"
version = "0.1.0"
description = "Multi-agent AI system for mimicking blogger writing style"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "IES Rafael Alberti", email = "info@example.com"}
]
keywords = ["ai", "llm", "blogger", "content-generation", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # LLM providers
    "huggingface-hub>=0.20.0",
    # HTTP and API clients
    "httpx>=0.28.1",
    "requests>=2.31.0",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    # Configuration
    "toml>=0.10.2",
    "pydantic>=2.6.1",
    "Markdown>=3.5.0",
    "Pygments>=2.17.0",
    # Utilities
    "python-dotenv>=1.2.1",
    # Visual workflow
    "daggr>=0.7.0",
    "gradio>=6.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.2.0",
]
modal = [
    "modal>=0.55.0",
]
openai = [
    "openai>=1.12.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
all-providers = [
    "openai>=1.12.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/AlejandroRS21/blogger-agent-tfg"
Documentation = "https://github.com/AlejandroRS21/blogger-agent-tfg/tree/main/project_docs"
Repository = "https://github.com/AlejandroRS21/blogger-agent-tfg"
Issues = "https://github.com/AlejandroRS21/blogger-agent-tfg/issues"

[project.scripts]
blogger-orchestrator = "src.orchestrator.runner:main"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aphra_blogger", "src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["aphra_blogger", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
